# SSPlayer

./: .gitignore  CMakeLists.txt
cmake/: glad.cmake  glm.cmake  stblib.cmake
resources/font/: icon-name.txt
resources/shaders/: 3d.vs  font.fs  primitive.fs
resources/shaders/ES2.0/: 3d.vs  base.fs  base.vs  font.fs  nv12.fs  primitive.fs  yuv_ext.fs  yuv_planar.fs
resources/shaders/GL3.3/: base.fs  nv12.fs  yuv_planar.fs
shaders/: 3d.vs  base.fs  base_color.fs  font.fs
src/: CMakeLists.txt  application.cpp  application.h  main.cpp  player.cpp  player.h  sdl_event.cpp  shader.cpp  shader.h  video_player.cpp  video_player.h
src/eventloop/: event_loop.cpp  event_loop.h  event_loop_factory.cpp  event_loop_factory.h  select_event_loop.cpp  select_event_loop.h
src/player/: player.cpp  player.h
src/player/backend/: backend.cpp  backend.h  frame.cpp  frame.h  gst.cpp  gst.h
src/player_backend/: CMakeLists.txt  backend.cpp  backend.h  frame.cpp  frame.h  frame_pool.h  frame_pool_test.cpp  player.cpp  player.h  state.h
src/player_backend/backend/: ffmpeg.cpp  ffmpeg.h  gst.cpp  gst.h
src/sound/: audio_sink.cpp  audio_sink.h
src/ui/: button.cpp  button.h  color.h  controller.cpp  controller.h  director.cpp  director.h  element.h  event.h  group.cpp  group.h  icon.cpp  icon.h  icon_button.cpp  icon_button.h  image.cpp  image.h  layer.cpp  layer.h  playlist.cpp  playlist.h  primitive.cpp  primitive.h  scene.cpp  scene.h  slider.cpp  slider.h  state.h  temp_state.h  text.cpp  text.h  ui_context.cpp  ui_context.h  vec.h  video_view.cpp  video_view.h
src/ui/font/: font.cpp  font.h  font_manager.cpp  font_manager.h
src/ui/gl/: buffers.cpp  buffers.h  gl_checker.h  shader.cpp  shader.h  shader_manager.cpp  shader_manager.h  texture.cpp  texture.h
src/utils/: time.cpp  time.h
toolchain_files/: toolchain_aarch64.cmake.template
